Adding tableView in timeline controller

--- a/Makestagram/Makestagram/Base.lproj/Main.storyboard
+++ b/Makestagram/Makestagram/Base.lproj/Main.storyboard
@@ -57,7 +57,22 @@
                     <view key="view" contentMode="scaleToFill" id="NPR-vr-gPo">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="98d-aG-xOb">
+                                <rect key="frame" x="0.0" y="20" width="600" height="531"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="V6D-cv-RgZ" id="exh-bh-Z18"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="98d-aG-xOb" firstAttribute="leading" secondItem="NPR-vr-gPo" secondAttribute="leading" id="OmZ-Cc-3Oz"/>
+                            <constraint firstAttribute="trailing" secondItem="98d-aG-xOb" secondAttribute="trailing" id="a7U-nP-ZIV"/>
+                            <constraint firstItem="98d-aG-xOb" firstAttribute="top" secondItem="cri-oj-PDi" secondAttribute="bottom" id="dIa-rQ-F6a"/>
+                            <constraint firstItem="5ph-z8-eb3" firstAttribute="top" secondItem="98d-aG-xOb" secondAttribute="bottom" id="oaR-no-Zko"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="Home" id="6sm-dT-Hj8">
                         <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
@@ -65,7 +80,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zTS-EM-Jvp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="840" y="-132"/>
+            <point key="canvasLocation" x="846" y="-132"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="m8o-YI-xHb">
