--- a/Makestagram/Makestagram/Base.lproj/Main.storyboard
+++ b/Makestagram/Makestagram/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xIh-mO-Odt">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Photo View Controller-->
@@ -58,20 +59,76 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="320" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="98d-aG-xOb">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="470" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="98d-aG-xOb">
                                 <rect key="frame" x="0.0" y="20" width="600" height="531"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="320" id="umb-wm-a6F" customClass="PostTableViewCell" customModule="Makestagram" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="470" id="umb-wm-a6F" customClass="PostTableViewCell" customModule="Makestagram" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="umb-wm-a6F" id="cG3-pu-wNW">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RwX-rF-QTs">
-                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="319.5"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RwX-rF-QTs">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="344"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="344" id="1zI-qo-GeI"/>
+                                                    </constraints>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bMS-fd-Q4L">
+                                                    <rect key="frame" x="544" y="401" width="44" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="07e-MA-heJ"/>
+                                                        <constraint firstAttribute="width" constant="44" id="tFP-NJ-a7V"/>
+                                                    </constraints>
+                                                    <inset key="contentEdgeInsets" minX="4" minY="7" maxX="4" maxY="4"/>
+                                                    <state key="normal" image="Heart">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <state key="selected" image="Heart-Selected"/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AdT-La-7nA">
+                                                    <rect key="frame" x="8" y="408" width="44" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="44" id="Ryq-8l-QkT"/>
+                                                        <constraint firstAttribute="height" constant="44" id="k5V-5j-nd5"/>
+                                                    </constraints>
+                                                    <state key="normal" image="More">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                </button>
+                                                <imageView userInteractionEnabled="NO" alpha="0.49999999999999961" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Heart" translatesAutoresizingMaskIntoConstraints="NO" id="mkr-ww-21j">
+                                                    <rect key="frame" x="20" y="368" width="20" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="aO6-TB-uWs"/>
+                                                        <constraint firstAttribute="width" constant="20" id="dJ8-BC-wiR"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Test User" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dVI-fT-W8b">
+                                                    <rect key="frame" x="60" y="367" width="482" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="Tbh-pf-Sbk"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                                    <color key="textColor" red="0.58823529411764708" green="0.58823529411764708" blue="0.58823529411764708" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="mkr-ww-21j" firstAttribute="leading" secondItem="cG3-pu-wNW" secondAttribute="leadingMargin" constant="12" id="13W-5G-GpJ"/>
+                                                <constraint firstItem="dVI-fT-W8b" firstAttribute="top" secondItem="RwX-rF-QTs" secondAttribute="bottom" constant="23" id="1UZ-X8-w27"/>
+                                                <constraint firstItem="AdT-La-7nA" firstAttribute="top" secondItem="mkr-ww-21j" secondAttribute="bottom" constant="20" id="1cs-pa-i9l"/>
+                                                <constraint firstAttribute="trailing" secondItem="RwX-rF-QTs" secondAttribute="trailing" id="9ml-En-CHI"/>
+                                                <constraint firstItem="AdT-La-7nA" firstAttribute="leading" secondItem="cG3-pu-wNW" secondAttribute="leadingMargin" id="Ahv-WB-ggQ"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="AdT-La-7nA" secondAttribute="bottom" constant="10" id="Kni-rV-T8V"/>
+                                                <constraint firstItem="AdT-La-7nA" firstAttribute="top" secondItem="dVI-fT-W8b" secondAttribute="bottom" constant="20" id="M82-SJ-o1w"/>
+                                                <constraint firstItem="RwX-rF-QTs" firstAttribute="leading" secondItem="cG3-pu-wNW" secondAttribute="leading" id="Oq2-eM-mbd"/>
+                                                <constraint firstItem="RwX-rF-QTs" firstAttribute="top" secondItem="cG3-pu-wNW" secondAttribute="top" id="VRq-fx-4mZ"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="bMS-fd-Q4L" secondAttribute="bottom" constant="16" id="auE-xX-uPk"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="dVI-fT-W8b" secondAttribute="trailing" constant="50" id="ddu-na-ffY"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="bMS-fd-Q4L" secondAttribute="trailing" constant="4" id="pAD-dl-nhw"/>
+                                                <constraint firstItem="dVI-fT-W8b" firstAttribute="leading" secondItem="mkr-ww-21j" secondAttribute="trailing" constant="20" id="yuW-Uo-F8O"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="postImageView" destination="RwX-rF-QTs" id="nN6-AE-lpn"/>
@@ -125,7 +182,10 @@
     </scenes>
     <resources>
         <image name="Camera" width="40" height="30"/>
+        <image name="Heart" width="72" height="68"/>
+        <image name="Heart-Selected" width="72" height="68"/>
         <image name="Home" width="38" height="36"/>
+        <image name="More" width="26" height="17"/>
         <image name="People" width="42" height="42"/>
     </resources>
 </document>
