--- a/Makestagram/Makestagram/Base.lproj/Main.storyboard
+++ b/Makestagram/Makestagram/Base.lproj/Main.storyboard
@@ -86,6 +86,9 @@
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                     <state key="selected" image="Heart-Selected"/>
+                                                    <connections>
+                                                        <action selector="likeButtonTapped:" destination="umb-wm-a6F" eventType="touchUpInside" id="Xmk-yD-p2h"/>
+                                                    </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AdT-La-7nA">
                                                     <rect key="frame" x="8" y="408" width="44" height="44"/>
@@ -96,6 +99,9 @@
                                                     <state key="normal" image="More">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <connections>
+                                                        <action selector="moreButtonTapped:" destination="umb-wm-a6F" eventType="touchUpInside" id="kPx-sa-anF"/>
+                                                    </connections>
                                                 </button>
                                                 <imageView userInteractionEnabled="NO" alpha="0.49999999999999961" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Heart" translatesAutoresizingMaskIntoConstraints="NO" id="mkr-ww-21j">
                                                     <rect key="frame" x="20" y="368" width="20" height="20"/>
@@ -131,6 +137,10 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="likeButton" destination="bMS-fd-Q4L" id="Jys-qn-lnP"/>
+                                            <outlet property="likesIconImageView" destination="mkr-ww-21j" id="7Ee-zh-mTc"/>
+                                            <outlet property="likesLabel" destination="dVI-fT-W8b" id="eBj-VQ-jGb"/>
+                                            <outlet property="moreButton" destination="AdT-La-7nA" id="thJ-H5-kH8"/>
                                             <outlet property="postImageView" destination="RwX-rF-QTs" id="nN6-AE-lpn"/>
                                         </connections>
                                     </tableViewCell>
@@ -157,7 +167,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zTS-EM-Jvp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="846" y="-70"/>
+            <point key="canvasLocation" x="841" y="-125"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="m8o-YI-xHb">
