modify timeline to display certain range of posts. Using skip an limit we downloaded only a efficient portion of the posts. Also implemented an used timeline component

--- a/Makestagram/Makestagram/Base.lproj/Main.storyboard
+++ b/Makestagram/Makestagram/Base.lproj/Main.storyboard
@@ -147,6 +147,7 @@
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="V6D-cv-RgZ" id="exh-bh-Z18"/>
+                                    <outlet property="delegate" destination="V6D-cv-RgZ" id="7ij-sY-TlV"/>
                                 </connections>
                             </tableView>
                         </subviews>
